--- a/inbrainssolutionsapp/src/pages/navbar/navbar.css
+++ b/inbrainssolutionsapp/src/pages/navbar/navbar.css
@@ -99,7 +99,8 @@ ul {
 
   
   .submenu_wrap a:hover {
-    background-color: #3145cc;
+    color:#3145cc;
+    
   }
   
   /* Style for the mobile button */
@@ -111,6 +112,11 @@ ul {
     cursor: pointer;
     font-size: 16px;
     transition: background-color 0.3s;
+  }
+
+  .mobile_button button a{
+    text-decoration: none;
+    color: white;
   }
   
   .mobile_button button:hover {
