--- a/inbrainssolutionsapp/src/pages/navbar/navbar.css
+++ b/inbrainssolutionsapp/src/pages/navbar/navbar.css
@@ -123,3 +123,43 @@ ul {
     background-color: #e65c00;
   }
   
+
+
+
+  .hamburger {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+
+
+  @media (max-width:575px) {
+
+    .header{
+      width: 100%;
+    }
+
+
+    .header-menu {
+      display: none;
+      flex-direction: column;
+      background: #444;
+      position: absolute;
+      top: 60px;
+      right: 0;
+      width: 100%;
+      padding: 10px;
+      border-radius: 5px;
+    }
+
+
+    .header-menu.active {
+      display: flex;
+    }
+  
+    .hamburger {
+      display: block;
+    }
+
+  }
