--- a/inbrainssolutionsapp/src/pages/videoSection/videoSection.css
+++ b/inbrainssolutionsapp/src/pages/videoSection/videoSection.css
@@ -1,7 +1,17 @@
+
+
+.background-image-section{
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 20px;
+}
+
 .text-animation-section {
-    padding-left: 3.125vw;
+    /* padding-left: 3.125vw;
     padding-right: 3.125vw;
-    width: 79.6875vw;
+    width: 79.6875vw; */
+    width: 90%;
+    margin:auto;
 }
 
 .animation-heading h1 {
@@ -83,4 +93,54 @@
 .video video{
     height: 100%;
     object-fit: cover;
+}
+
+
+
+
+
+
+
+
+@media (max-width:575px){
+    .background-image-section{
+        width: 100%;
+        margin-top: 100px;
+        
+    }
+
+    .text-animation-section{
+        width: 90%;
+        margin: auto;
+
+    }
+
+    .animation-heading h1 {
+        font-size:50px;
+        letter-spacing: 20px;
+        line-height: 50px;
+    }
+
+
+
+
+    .animation-scroll-section h1 {
+
+        font-size: 30px;
+        font-weight: bold;
+        margin: 0;
+        white-space: nowrap;
+        color: #1F7FD4;
+    
+        letter-spacing: 15px;
+        line-height: 30px;
+    
+        display: flex;
+        align-items: center;
+        /* height: 3.4rem; */
+        width: 100%;
+       
+        
+    }
+
 }
