--- a/inbrainssolutionsapp/src/pages/footer/footer.css
+++ b/inbrainssolutionsapp/src/pages/footer/footer.css
@@ -105,3 +105,30 @@
     font-size: 30px;
     font-weight: 500;
 }
+
+
+
+@media (max-width:575px) {
+
+    .footer-below-sec{
+        width:90%;
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
+        margin: 0 auto;
+        gap: 100px;
+    }
+
+
+    .footer-bottom-section{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        color: white;
+        gap: 10px;
+        justify-content: center;
+        /* align-items: center; */
+    }
+    
+}
