--- a/inbrainssolutionsapp/src/pages/ourServicesSection/ourService.css
+++ b/inbrainssolutionsapp/src/pages/ourServicesSection/ourService.css
@@ -494,7 +494,7 @@ img.client-img {
         gap: 10px;
         font-family: Lato, sans-serif;
         height: auto;
-        padding-left: 100px; 
+        padding-left: 40px; 
         overflow-x: hidden;
     }
 
@@ -607,6 +607,17 @@ img.client-img {
     background-color: #555;
 }
 
+
+.ourServices {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    padding-left: 40px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    gap: 50px;
+
+}
 
 
 
